[#104374064] fix course modal scrollbar heights

--- a/src/modules/scheduling/css/courseAttendanceModal.scss
+++ b/src/modules/scheduling/css/courseAttendanceModal.scss
@@ -42,7 +42,7 @@
 				.course-table-container{
 					overflow-y: scroll;
 					overflow-x: hidden;
-					height: calc(75vh - 60px);
+					height: calc(85vh - 160px);
 					table{
 						border-collapse: collapse;
 						td{
@@ -338,7 +338,7 @@
 				.attendance-list{
 					min-width: 0px;
 					.course-table-container{
-						height: calc(85vh - 60px);
+						height: calc(100vh - 210px);
 					}
 				}
 			}
